--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "eloquent"
   ],
   "require": {
-    "php": ">=7.1"
+    "php": ">=7.1",
+    "goldspecdigital/laravel-eloquent-uuid": "^7.0"
   },
   "require-dev": {
     "laravel/laravel": "5.*",
